--- a/book/07-bivariate_discrete_rv.Rmd
+++ b/book/07-bivariate_discrete_rv.Rmd
@@ -1,4 +1,4 @@
-# Bivariate Discrete Random Variables {#bivariatediscreterv}
+# 📝 Bivariate Discrete Random Variables {#bivariatediscreterv}
 
 
 <!--  -->
